# tfg_automatizacion_wan

./: .env.example  .gitignore  DOCUMENTO.md  GEMINI.md  README.md  pyproject.toml  requirements.txt
ansible/: ansible.cfg  configure_wan.yml  inventory.yml
docs/: fase1_diseno.md
inventory/: devices.yml  mac_map.yml  network_config.yml
src/: __init__.py  configure_network.py  configure_ospf.py  connector.py  main.py  models.py  prep_inventory.py  provisioning.py  utils.py  verify_network.py
src/tfg_automatizacion_wan/: connector.py  main.py  models.py
tests/: test_connector.py  test_models.py
topology/: topology.gns3
