[project]
name = "tfg_automatizacion_wan"
version = "0.1.0"
description = "TFG ASIR - Automatización de red con Python y Ansible"
authors = [
    {name = "Martín Gardachal Rodríguez"}
]
dependencies = [
    "netmiko>=4.4.0",
    "paramiko>=3.4.0",
    "napalm>=4.1.0",
    "pywinrm>=0.4.3",
    "pytest>=8.0.0",
]
requires-python = ">=3.12"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
