[project]
name = "tfg_automatizacion_wan"
version = "0.1.0"
description = "TFG ASIR - Automatización de red con Python y Ansible"
readme = "README.md"
license = { file = "LICENSE.txt" }
authors = [
    { name = "Martín Gardachal Rodríguez" },
]
requires-python = ">=3.12"
dependencies = [
    "netmiko>=4.4.0",
    "paramiko>=3.4.0",
    "napalm>=4.1.0",
    "pywinrm>=0.4.3",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "ruff>=0.5",
]

[project.scripts]
wan               = "src.main:main"
prep              = "src.prep_inventory:main"
provision         = "src.provisioning:main"
configure-network = "src.configure_network:main"
configure-ospf    = "src.configure_ospf:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = []
